--- a/public/css/home.css
+++ b/public/css/home.css
@@ -184,7 +184,7 @@ section img#astronaut{
 
 /*FOOTER*/
 
-body {
+.home {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
