--- a/public/css/discover.css
+++ b/public/css/discover.css
@@ -1,16 +1,12 @@
-/* General Reset */
-* {
-    margin: 0;
-    padding: 0;
-}
-
 /* Body Styles */
 body {
     background: linear-gradient(to bottom, #000428, #9acdfa);
     color: #fff;
     font-family: Arial, sans-serif;
     position: relative;
+    padding-bottom: 80px;
 }
+
 
 /* Navbar Styles */
 header {
@@ -35,8 +31,8 @@ nav.navbar {
 }
 
 header .navbar a {
-    font-size: 2rem;
-    margin-left: 8rem;
+    font-size: 1.2rem;
+    margin-left: 5vb;
     color: rgb(0, 238, 255);
     text-decoration: none;
 }
@@ -89,7 +85,7 @@ header .navbar a:hover {
 }
 
 /* Responsive Styling for Search Bar and Navbar */
-@media (max-width: 768px) {
+@media (max-width: 1005px) {
     #menu-bar {
         display: block;
     }
@@ -247,7 +243,6 @@ header .navbar a:hover {
     position: fixed;
     top: 100px; /* Adjusted to not overlap the navbar */
     left: 0;
-    width: 50px;
     height: calc(100vh - 100px); /* Full height minus navbar */
     background-color: #333;
     padding: 20px;
@@ -302,7 +297,7 @@ header .navbar a:hover {
 }
 
 /* Mobile Sidebar Styles */
-@media (max-width: 768px) {
+@media (max-width: 1005px) {
     .sidebar {
         top: 50px; /* Adjust top position */
         height: calc(100vh - 50px); /* Make sidebar full height minus header height */
@@ -436,12 +431,6 @@ header .navbar a:hover {
     animation: bounce 0.6s;
 }
 
-
-body {
-    position: relative;
-    padding-bottom: 80px;
-}
-
 #top {
     position: absolute;
     top: 0;
@@ -532,7 +521,6 @@ body:not(:root) .back-to-top {
     .sidebar {
         position: fixed;
         top: 100px;
-        width: 30px;
         z-index: 500;
     }
 
@@ -554,7 +542,7 @@ body:not(:root) .back-to-top {
 }
 
 /* Medium screens (e.g., tablets) */
-@media (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 1005px) {
     #menu-bar {
         font-size: 30px;
         padding: .3rem 1rem;
@@ -590,7 +578,6 @@ body:not(:root) .back-to-top {
     .sidebar {
         position: fixed;
         top: 100px;
-        width: 30px;
         z-index: 1000;
     }
 
