--- a/public/css/login.css
+++ b/public/css/login.css
@@ -21,3 +21,7 @@ input[type="password"] {
   padding: 8px;
   box-sizing: border-box; /* Ensure padding doesn't affect width */
 }
+
+#serverError{
+  font-size: 20px;
+}
