--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -159,5 +159,81 @@ h2{
     }
 }
 
+@media (max-width: 1200px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    .content-form section {
+        margin-bottom: 1.5rem;
+    }
+
+    .content-form i {
+        font-size: 2rem;
+    }
+
+    .media li {
+        margin: 0 0.8rem;
+    }
+
+    .media i {
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width: 800px) {
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    p {
+        font-size: 0.9rem;
+    }
+    .content-form section {
+        margin-bottom: 1rem;
+    }
+
+    .content-form i {
+        font-size: 1.8rem;
+    }
+    .media li {
+        margin: 0 0.5rem;
+    }
+
+    .media i {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 400px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 0.8rem;
+    }
+
+    .content-form section {
+        margin-bottom: 0.5rem;
+    }
+
+    .content-form i {
+        font-size: 1.5rem;
+    }
+
+    .media li {
+        margin: 0 0.3rem;
+    }
+
+    .media i {
+        font-size: 1.2rem;
+    }
+}
+
 
 
