--- a/public/css/game.css
+++ b/public/css/game.css
@@ -9,8 +9,14 @@ body {
 }
 iframe {
     border: none;
-    width: 80%;
-    height: 80%;
+    width: 1280px;
+    height: 720px;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
     border-radius: 10px;
+}
+@media (max-width: 1280px) {
+    iframe {
+        width: 100%;
+        height: auto;
+    }
 }
