--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -5,6 +5,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 header {
