--- a/public/css/feedback.css
+++ b/public/css/feedback.css
@@ -6,6 +6,7 @@ body{
     background-size: 100% 110vh;
     position: relative;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 .h1-tag{
     text-align: center;
